ft: home component

--- a/src/app/components/home-page/home-page.component.html
+++ b/src/app/components/home-page/home-page.component.html
@@ -1,1 +1,90 @@
-<p>home-page works!</p>
+<section id="main" class="">
+  <nav class="py-2 bg-light navbar-light border-bottom">
+    <div class="container d-flex flex-wrap">
+      <ul class="nav m-auto">
+        <li class="nav-item">
+          <a href="#" class="nav-link link-dark px-2 active">Home</a>
+        </li>
+        <li class="nav-item">
+          <a href="#" class="nav-link link-dark px-2">Repo Search</a>
+        </li>
+        <li class="nav-item">
+          <a href="#" class="nav-link link-dark px-2">About</a>
+        </li>
+      </ul>
+    </div>
+  </nav>
+  <header class="py-3 mb-4 border-bottom bg-dark">
+    <div class="container d-flex flex-wrap justify-content-center">
+      <a
+        href="/"
+        class="d-flex align-items-center mb-3 mb-lg-0 me-lg-auto text-dark text-decoration-none"
+      >
+        <span class="fs-4 text-light">Git Search</span>
+      </a>
+      <form class="col-12 col-lg-auto mb-3 mb-lg-0" (ngSubmit)="searchGithub()">
+        <div class="form-group d-flex">
+          <label for="search"></label>
+          <input
+            type="search"
+            class="form-control"
+            placeholder="Search..."
+            [(ngModel)]="username"
+            name="username"
+          />
+          <button class="btn btn-primary m-1" type="submit">Search</button>
+          <br />
+        </div>
+        <small class="text-muted m-1">Search for: {{ username }}</small>
+      </form>
+    </div>
+  </header>
+
+  <div *ngIf="gitprofile; then populateProfileData; else errorNoGitProfile"></div>
+  <ng-template #populateProfileData class="container" >
+    <div class="text-center text-light h2">Search Results...</div>
+    <div class="row">
+      <div
+        class="col-sm-12 col-md-6 bg-warning text-light p-3"
+        id="userDetails"
+      >
+        <h4>Github User id: {{ gitprofile.id }}</h4>
+        <h1>{{ gitprofile.name }}</h1>
+        <img src="{{ gitprofile.avatar_url }}" alt="" />
+        <br />
+
+        <p>Followers : {{ gitprofile.followers }} <br /></p>
+        <p>Following : {{ gitprofile.following }}</p>
+        <p class="text-center">
+          <a href="{{ gitprofile.html_url }}">View Account on GitHub</a>
+        </p>
+      </div>
+      <div
+        class="col-sm-12 col-md-6 bg-primary border-right p-3 border-top"
+        id="aboutUser"
+      >
+        <h3 class="text-center">About User</h3>
+        <ul>
+          <li>Github username: {{ gitprofile.login }}</li>
+          <p>Blog: <span><a href="{{gitprofile.blog}}" target="blank">{{gitprofile.blog}}</a> </span></p>
+          <p>Company: {{ gitprofile.company }}</p>
+          <p>Account created on: {{ gitprofile.created_at }}</p>
+          <p>Account last updated on: {{ gitprofile.updated_at }}</p>
+        </ul>
+        <br />
+      </div>
+    </div>
+    <div class="row border">
+      <div class="col-md-12 text-center">
+        <div class="" id="repoDisplay">
+          <h3 class="p-4">User Repositories</h3>
+          <p>Public Repositories: {{ gitprofile.public_repos }}</p>
+          <a href="{{ gitprofile.repos_url }}">{{ gitprofile.repos_url }}</a>
+        </div>
+      </div>
+    </div>
+  </ng-template>
+  <ng-template #errorNoGitProfile>
+    <p class="text-light">User profile not found</p>
+  </ng-template>
+</section>
