--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,1 +1,26 @@
-<p>navbar works!</p>
+<nav class="py-2 bg-light navbar-light border-bottom">
+  <div class="container d-flex flex-wrap">
+    <ul class="nav m-auto">
+      <li class="nav-item">
+        <a routerLink="home" class="nav-link link-dark px-2 active">Home</a>
+      </li>
+      <li class="nav-item">
+        <a
+          routerLink="/repositories"
+          routerLinkActive="active"
+          class="nav-link link-dark px-2"
+          >Repo Search</a
+        >
+      </li>
+      <li class="nav-item">
+        <a
+          routerLink="/about"
+          routerLinkActive="active"
+          class="nav-link link-dark px-2"
+          >About</a
+        >
+      </li>
+    </ul>
+  </div>
+</nav>
+<router-outlet></router-outlet>
