ft: get github user details method

--- a/src/app/components/repo/repo.component.html
+++ b/src/app/components/repo/repo.component.html
@@ -1,25 +1,38 @@
+<header class="py-3 mb-4 border-bottom bg-dark">
+  <div class="container d-flex flex-wrap justify-content-center">
+    <a
+      href="/"
+      class="d-flex align-items-center mb-3 mb-lg-0 me-lg-auto text-dark text-decoration-none"
+    >
+      <span class="fs-4 text-light">Git Search</span>
+    </a>
+    <form
+      class="col-12 col-lg-auto mb-3 mb-lg-0"
+      (ngSubmit)="searchGithubRepo()"
+    >
+      <div class="form-group d-flex">
+        <label for="search"></label>
+        <input
+          type="search"
+          class="form-control"
+          placeholder="Search..."
+          [(ngModel)]="reponame"
+          name="reponame"
+        />
+        <button class="btn btn-primary m-1" type="submit">Search</button>
+        <br />
+      </div>
+      <small class="text-muted m-1">Search for: {{ reponame }}</small>
+    </form>
+  </div>
+</header>
 <section>
-  <!-- <form class="col-12 col-lg-auto mb-3 mb-lg-0" (ngSubmit)="searchGithubRepo()">
-    <div class="form-group d-flex">
-      <label for="search"></label>
-      <input
-        type="search"
-        class="form-control"
-        placeholder="Search..."
-        [(ngModel)]="reponame"
-        name="reponame"
-      />
-      <button class="btn btn-primary m-1" type="submit">Search</button>
-      <br />
-    </div>
-    <small class="text-muted m-1">Search for: {{ reponame }}</small>
-  </form> -->
   <p>We nest repo component here</p>
-  <div *ngIf="ExistingRepo; then RepoData; else errorNoRepoData"></div>
+  <div *ngIf="ExistingRepos; then RepoData; else errorNoRepoData"></div>
   <ng-template #RepoData class="">
     <div class="container" id="repos">
       <div class="col-sm-12 col-md-12">
-        <div class="" *ngFor="let repo of ExistingRepo.slice(0)">
+        <div class="" *ngFor="let repo of ExistingRepos">
           <div class="card m-3">
             <div class="card-body">
               <div class="card-header m-3 h5">
