--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -1,1 +1,43 @@
-<p>about works!</p>
+<div id="about">
+  <div class="px-4 pt-5 my-5 text-center border-bottom">
+    <h1 class="display-4 fw-bold">Git Search</h1>
+    <h3 class="m-5">About</h3>
+    <div class="col-lg-6 mx-auto">
+      <p class="lead mb-4">
+        Quickly search through all github users. Enter either their name,
+        username or just a hunch. <br />
+        You can also search for any repository from all github users across the
+        globe. <br />
+        This simple git search application Consumes Github API to bring you the
+        search results. <br>
+        <span><em class="fs-3">Enjoy!!!</em></span>
+      </p>
+      <div class="d-grid gap-2 d-sm-flex justify-content-sm-center mb-5">
+        <a
+          routerLink="/repositories"
+          routerLinkActive="active"
+          class="btn btn-outline-primary btn-lg px-4 me-sm-3"
+          >Search Repo</a
+        >
+        <a
+          routerLink="/home"
+          routerLinkActive="active"
+          class="btn btn-outline-secondary btn-lg px-4"
+          >Search User</a
+        >
+      </div>
+    </div>
+    <div class="overflow-hidden" style="max-height: 30vh">
+      <div class="container px-5">
+        <img
+          src="bootstrap-docs.png"
+          class="img-fluid border rounded-3 shadow-lg mb-4"
+          alt="Example image"
+          width="700"
+          height="500"
+          loading="lazy"
+        />
+      </div>
+    </div>
+  </div>
+</div>
