--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -2,13 +2,13 @@
   <div class="container d-flex flex-wrap">
     <ul class="nav m-auto">
       <li class="nav-item">
-        <a routerLink="home" class="nav-link link-dark px-2 active">Home</a>
+        <a routerLink="home" class="btn btn-outline-secondary nav-link px-2 m-2">Home</a>
       </li>
       <li class="nav-item">
         <a
           routerLink="/repositories"
           routerLinkActive="active"
-          class="nav-link link-dark px-2"
+          class="btn btn-outline-secondary nav-link px-2 m-2"
           >Repo Search</a
         >
       </li>
@@ -16,7 +16,7 @@
         <a
           routerLink="/about"
           routerLinkActive="active"
-          class="nav-link link-dark px-2"
+          class="btn btn-outline-secondary nav-link px-2 m-2"
           >About</a
         >
       </li>
