--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -27,16 +27,28 @@
         >
       </div>
     </div>
-    <div class="overflow-hidden" style="max-height: 30vh">
+    <div class="overflow-hidden">
       <div class="container px-5">
+        <div class="m-3">
+        <h2>Searching for users</h2>
         <img
-          src="bootstrap-docs.png"
+          src="https://i.postimg.cc/j5gNNzY4/gitsearch1.png"
           class="img-fluid border rounded-3 shadow-lg mb-4"
-          alt="Example image"
           width="700"
-          height="500"
+          height=""
           loading="lazy"
         />
+      </div>
+        <div class="m-3">
+        <h2>Searching for Repositories</h2>
+        <img
+          src="https://i.postimg.cc/mgLHdXZy/gitsearch2.png"
+          class="img-fluid border rounded-3 shadow-lg mb-4"
+          width="700"
+          height=""
+          loading="lazy"
+        />
+      </div>
       </div>
     </div>
   </div>
