--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,13 @@
 /* You can add global styles to this file, and also import other style files */
 p {
-  /* /* font-family: "Akshar", sans-serif; */
+ 
   font-family: "Nunito Sans", sans-serif;
 } 
+
+h4,.h4, h3, .h3 {
+ font-family: "Akshar", sans-serif;
+}
+
+h2, .h2{
+  font-family: 'Bitter', serif;
+}
